Projet_GL/src/test/deca/codegen/valid/unprovided/ok/modulo2.deca
// Description: test modulo
// Resultat attendu: 0
//

{
    int x = 234152;
    x = x % 2;
    println(x);
}
