Projet_GL/src/test/deca/codegen/invalid/modulo_zero.deca
// Modulo 0

{
  int a = 2 % 0;
}
